# vibecoded-Kanban

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  compose.yaml  pyproject.toml
backend/: AGENTS.md  pyproject.toml
backend/app/: __init__.py  ai.py  database.py  main.py  openrouter.py
backend/app/static/: index.html
backend/tests/: test_main.py  test_openrouter.py
docs/: PLAN.md  authentication.md  code_review.md  database-schema.json  database.md  review.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AiChat.test.tsx  AiChat.tsx  AuthGate.test.tsx  AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx  icons.tsx
frontend/src/lib/: kanban.ts
frontend/test-results/: .last-run.json
frontend/test-results/kanban-authenticated-board-moves-a-card-between-columns-chromium/: error-context.md
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
