[project]
name = "project-management-mvp-tests"
version = "0.1.0"
description = "Repository-level test environment for the Project Management MVP"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
